# tiles

./: .do.md.kate-swp  .gitattributes  .gitignore  BLUEPRINT.md  CHANGELOG.md  CHARACTER_PALETTE.md  CONTRIBUTING.md  Cargo.toml  HYBRID_IDENTITY.md  LICENSE  MASTER_PLAN.md  MEMORY_EFFICIENCY.md  README.md  Ratatui vs. Zed & VS Code.txt  SCROLL_PATTERN.md  SOVEREIGN_WINDOW.md  TERMA_ENGINE_DEFINITION.md  WINDOW_ARCHITECTURE.md  breadcrumb_ui.rs  check_widths.rs  context_ui.rs  current_handle_event.txt  demon.md  do.md  flake.nix  handle_event_new.rs  idea.md  input_debug_example.rs  install.sh  main_backup.rs  main_handle_event.rs  main_new.rs  main_prefix.rs  note.md  perfect_ui.rs  plan.md  release.sh  remote_ui.rs  remotes_ui.rs  shell.nix  (+9 more)
.demon/: atlas.json
.dracon/: project-state.md
.github/workflows/: release.yml
docs/qa/: matrix.md
plan/: .blueprint.md.kate-swp  blueprint.md  blueprint.toml  events.jsonl  state.json
refactor_plan/: blueprint.md
src/: app.rs  app_test.rs  check_event_variants.rs  check_terma.rs  check_terma_mod.rs  config.rs  event.rs  event_helpers.rs  icons.rs  license.rs  main.rs
src/events/: editor.rs  file_manager.rs  galaxy.rs  git.rs  input.rs  mod.rs  modals.rs  monitor.rs  tree.rs
src/modules/: docker.rs  files.rs  git.rs  introspection.rs  mod.rs  remote.rs  system.rs
src/src/: check_event_variants.rs  event.rs  icons.rs  license.rs  main.rs
src/src/modules/: files.rs  system.rs
src/src/ui/: mod.rs  theme.rs
src/state/: mod.rs
src/ui/: galaxy.rs  layout.rs  mod.rs  modals.rs  theme.rs  tree.rs
src/ui/pages/: git.rs  mod.rs  monitor.rs  settings.rs
src/ui/panes/: breadcrumbs.rs  editor.rs  files.rs  mod.rs  sidebar.rs
