[package]
name = "tiles"
version = "0.1.14367"
edition = "2021"

[dependencies]

color-eyre = "0.6.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
walkdir = "2.5.0"
dirs = "5.0.1"
chrono = "0.4.42"
ratatui = "0.29.0"
ssh2 = "0.9.5"
terma = { git = "https://github.com/DraconDev/terma" }
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.9.11"
libc = "0.2.180"
unicode-width = "0.2.0"
uuid = { version = "1.11.0", features = ["v4"] }
image = "0.24"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[workspace]
