[package]
name = "tiles"
version = "0.1.14452"
edition = "2021"
license-file = "LICENSE"

[dependencies]

color-eyre = "0.6.3"
base64 = "0.22.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
walkdir = "2.5.0"
dirs = "5.0.1"
chrono = "0.4.42"
ratatui = "0.29.0"
terma = { package = "dracon-tui", path = "../dracon-libs/tools/tui/dracon-tui-runtime" }
dracon-tui-contracts = { path = "../dracon-libs/contracts/crates/dracon-tui-contracts" }
dracon-tui-input = { path = "../dracon-libs/tools/tui/dracon-tui-input" }

dracon-files = { path = "../dracon-libs/tools/files/dracon-files" }
dracon-git = { path = "../dracon-libs/tools/sync/dracon-git" }
dracon-system = { path = "../dracon-libs/tools/system/dracon-system" }
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.9.11"
libc = "0.2.180"
unicode-width = "0.2.0"
uuid = { version = "1.11.0", features = ["v4"] }
image = "0.24"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[workspace]
