[package]
name = "tiles"
version = "0.18.27"
edition = "2021"
license-file = "LICENSE"

[dependencies]

color-eyre = "0.6.3"
base64 = "0.22.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
walkdir = "2.5.0"
dirs = "5.0.1"
chrono = "0.4.42"
ratatui = "0.29.0"

dracon-terminal-engine = { git = "https://github.com/DraconDev/dracon-libs" }
dracon-files = { git = "https://github.com/DraconDev/dracon-libs" }
dracon-git = { git = "https://github.com/DraconDev/dracon-libs" }
dracon-system = { git = "https://github.com/DraconDev/dracon-libs" }

tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.9.11"
libc = "0.2.180"
unicode-width = "0.2.0"
uuid = { version = "1.11.0", features = ["v4"] }
image = "0.24"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[workspace]
